Mail TCK pluggability tests + runs with angus and GF. (#37)
* update mail tck/user guide version to 2.1/2.1.0

Signed-off-by: gurunandan.rao@oracle.com <gurunandan.rao@oracle.com>

Co-authored-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>